--- a/alazaraqalabyadh/alazaraqalabyadh.csproj
+++ b/alazaraqalabyadh/alazaraqalabyadh.csproj
@@ -244,9 +244,14 @@
     <Content Include="Content\images\prettyPhoto\light_square\default_thumbnail.gif" />
     <Content Include="Content\images\prettyPhoto\light_square\loader.gif" />
     <Content Include="Content\images\prettyPhoto\light_square\sprite.png" />
+    <Content Include="Content\img-Comany\about-us.jpg" />
     <Content Include="Content\img-Comany\aluminum-sliding-classs-doors.jpg" />
     <Content Include="Content\img-Comany\Canon-Double-Glazing-1.jpg" />
     <Content Include="Content\img-Comany\favicon.ico" />
+    <Content Include="Content\img-Comany\home-01.jpg" />
+    <Content Include="Content\img-Comany\home-02.jpg" />
+    <Content Include="Content\img-Comany\home-04.jpg" />
+    <Content Include="Content\img-Comany\home03.jpg" />
     <Content Include="Content\img-Comany\logo-alazaraq.png" />
     <Content Include="Content\img-Comany\project-1.jpg" />
     <Content Include="Content\img-Comany\project-2.jpg" />
